kotti(KT-35): fix z-index issue and support invalid message

--- a/packages/kotti-style/src/_typography.scss
+++ b/packages/kotti-style/src/_typography.scss
@@ -147,7 +147,9 @@ dl {
 
 	.editable {
 		padding: 0.1rem 0;
-
+		&--empty {
+			font-style: italic;
+		}
 		&:hover {
 			cursor: pointer;
 			background: $lightgray-300;
